# million-agents

./: .env.example  .gitignore  DISTRIBUTED_SYSTEM_IMPLEMENTATION.md  GETTING_STARTED.md  PROJECT_PLAN.md  README.md  USAGE.md  init_db.py  million_agents.db  pyproject.toml  requirements.txt  run_web_interface.py  start.py  start_web.py
docs/: DISTRIBUTED_COVERAGE_IMPROVEMENT_SUMMARY.md  README.md  async-framework-explained.md  database-schema-design.md  web-interface-guide.md  web-interface-visualization-guide.md
docs/audit_log/: README.md  audit_log_basics.md  audit_log_interview_questions.md  large_scale_audit_architecture.md
docs/database/: 01-database-architecture-design.md  database-implementation-guide.md
docs/distributed-systems/: README.md
docs/message_propagation/: 01_basic_knowledge.md  02_information_diffusion.md  03_influence_maximization.md  04_system_architecture.md  05_interview_questions.md
examples/: async_demo.py  async_simple_demo.py  batch_demo.py  customer_service_demo.py  demo.py  policy_impact_demo.py  product_viral_demo.py  quick_start_demo.py  social_network_demo.py
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: __init__.py
tech-blog/: 02-tdd-database-implementation.md  03-database-scalability-optimization.md  04-database-interview-questions.md
tests/: conftest.py  test_agent_model.py  test_agent_repository.py  test_agents.py  test_async_framework.py  test_async_social_agent.py  test_batch_manager.py  test_community_detection.py  test_community_membership_model.py  test_community_model.py  test_community_repository.py  test_config.py  test_database_config.py  test_database_migrations.py  test_friendship_model.py  test_friendship_repository.py  test_integration.py  test_interaction_model.py  test_memory_optimizer.py  test_pagerank_algorithm.py  test_shortest_path.py  test_social_agent_model.py  test_social_network_graph.py  test_visualization.py
(+148 files in other folders)
